Fix: Update all image paths to use correct public/assets directory structure

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="flex flex-col md:grid md:grid-cols-3 gap-12 items-start">
                     <div class="reveal order-1 md:order-2 w-full flex justify-center">
                         <div class="bg-white rounded-xl shadow-lg p-6 text-center">
-                            <img src="./assets/images/founder.jpg" alt="Mr. Andrews John - Founder & CEO" class="w-48 h-48 rounded-full object-cover mx-auto mb-4 shadow-md">
+                            <img src="./public/assets/images/founder.jpg" alt="Mr. Andrews John - Founder & CEO" class="w-48 h-48 rounded-full object-cover mx-auto mb-4 shadow-md">
                             <h3 class="text-xl font-bold text-gray-900 mb-2">Mr. Andrews John</h3>
                             <p class="text-orange-600 font-semibold mb-2">Founder & CEO</p>
                             <p class="text-gray-600 text-sm">20+ Years Banking Experience</p>
@@ -228,66 +228,66 @@
                     <!-- First Row - Left to Right -->
                     <div class="marquee scroll-ltr">
                         <div class="marquee-content">
-                            <div class="partner-logo"><img src="./assets/partners/HDFC_Bank_Logo.png" alt="HDFC Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/sbi logo.webp" alt="SBI" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/Yes-Bank-logo.svg" alt="Yes Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/Punjab-National-Bank-logo.png" alt="Punjab National Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/indusind-bank1.webp" alt="IndusInd Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/HDFC_Bank_Logo.png" alt="HDFC Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/sbi logo.webp" alt="SBI" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/Yes-Bank-logo.svg" alt="Yes Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/Punjab-National-Bank-logo.png" alt="Punjab National Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/indusind-bank1.webp" alt="IndusInd Bank" /></div>
 
                             <!-- Duplicate for seamless loop -->
-                            <div class="partner-logo"><img src="./assets/partners/HDFC_Bank_Logo.png" alt="HDFC Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/sbi logo.webp" alt="SBI" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/Yes-Bank-logo.svg" alt="Yes Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/HDFC_Bank_Logo.png" alt="HDFC Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/sbi logo.webp" alt="SBI" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/Yes-Bank-logo.svg" alt="Yes Bank" /></div>
                         </div>
                     </div>
                     
                     <!-- Second Row - Right to Left -->
                     <div class="marquee scroll-rtl">
                         <div class="marquee-content">
-                            <div class="partner-logo"><img src="./assets/partners/bajaj-finserv-logo.png" alt="Bajaj Finserv" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/tata capital logo.png" alt="Tata Capital" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/Piramal_Finance_logo.png" alt="Piramal Finance" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/fullerton logo.png" alt="Fullerton India" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/iifl capital logo.png" alt="IIFL Capital" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/clix capital logo.png" alt="Clix Capital" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/poonawalla fincorp logo.png" alt="Poonawalla Fincorp" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/sundaram-finance-sfl-logo.png" alt="Sundaram Finance" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/tvs credit logo.webp" alt="TVS Credit" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/LendingkartFinance logo.png" alt="Lendingkart" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/NeoGrowth-Credit-Pvt.-Limited.png" alt="NeoGrowth Credit" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/vistaar logo.png" alt="Vistaar Finance" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/bajaj-finserv-logo.png" alt="Bajaj Finserv" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/tata capital logo.png" alt="Tata Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/Piramal_Finance_logo.png" alt="Piramal Finance" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/fullerton logo.png" alt="Fullerton India" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/iifl capital logo.png" alt="IIFL Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/clix capital logo.png" alt="Clix Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/poonawalla fincorp logo.png" alt="Poonawalla Fincorp" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/sundaram-finance-sfl-logo.png" alt="Sundaram Finance" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/tvs credit logo.webp" alt="TVS Credit" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/LendingkartFinance logo.png" alt="Lendingkart" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/NeoGrowth-Credit-Pvt.-Limited.png" alt="NeoGrowth Credit" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/vistaar logo.png" alt="Vistaar Finance" /></div>
                             <!-- Duplicate for seamless loop -->
-                            <div class="partner-logo"><img src="./assets/partners/bajaj-finserv-logo.png" alt="Bajaj Finserv" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/tata capital logo.png" alt="Tata Capital" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/Piramal_Finance_logo.png" alt="Piramal Finance" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/fullerton logo.png" alt="Fullerton India" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/iifl capital logo.png" alt="IIFL Capital" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/clix capital logo.png" alt="Clix Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/bajaj-finserv-logo.png" alt="Bajaj Finserv" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/tata capital logo.png" alt="Tata Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/Piramal_Finance_logo.png" alt="Piramal Finance" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/fullerton logo.png" alt="Fullerton India" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/iifl capital logo.png" alt="IIFL Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/clix capital logo.png" alt="Clix Capital" /></div>
                         </div>
                     </div>
                     
                     <!-- Third Row - Left to Right -->
                     <div class="marquee scroll-ltr">
                         <div class="marquee-content">
-                            <div class="partner-logo"><img src="./assets/partners/01_HSBC_MASTERBRAND_LOGO_RGB.svg" alt="HSBC" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/standard charted logo.png" alt="Standard Chartered" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/citi bank logo.svg" alt="Citi Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/dbs_logo.svg" alt="DBS Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/IDFC-logo-website.svg" alt="IDFC First Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/equitas logo.png" alt="Equitas Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/aditya birla logo.svg" alt="Aditya Birla Capital" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/cholamandalam_logo.svg" alt="Cholamandalam Investment" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/01_HSBC_MASTERBRAND_LOGO_RGB.svg" alt="HSBC" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/standard charted logo.png" alt="Standard Chartered" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/citi bank logo.svg" alt="Citi Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/dbs_logo.svg" alt="DBS Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/IDFC-logo-website.svg" alt="IDFC First Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/equitas logo.png" alt="Equitas Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/aditya birla logo.svg" alt="Aditya Birla Capital" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/cholamandalam_logo.svg" alt="Cholamandalam Investment" /></div>
 
-                            <div class="partner-logo"><img src="./assets/partners/hinduja finance.png" alt="Hinduja Finance" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/anandrathi logo.webp" alt="Anand Rathi" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/lt-logo.webp" alt="L&T Finance" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/hinduja finance.png" alt="Hinduja Finance" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/anandrathi logo.webp" alt="Anand Rathi" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/lt-logo.webp" alt="L&T Finance" /></div>
                             <!-- Duplicate for seamless loop -->
-                            <div class="partner-logo"><img src="./assets/partners/01_HSBC_MASTERBRAND_LOGO_RGB.svg" alt="HSBC" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/standard charted logo.png" alt="Standard Chartered" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/citi bank logo.svg" alt="Citi Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/dbs_logo.svg" alt="DBS Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/IDFC-logo-website.svg" alt="IDFC First Bank" /></div>
-                            <div class="partner-logo"><img src="./assets/partners/equitas logo.png" alt="Equitas Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/01_HSBC_MASTERBRAND_LOGO_RGB.svg" alt="HSBC" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/standard charted logo.png" alt="Standard Chartered" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/citi bank logo.svg" alt="Citi Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/dbs_logo.svg" alt="DBS Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/IDFC-logo-website.svg" alt="IDFC First Bank" /></div>
+                            <div class="partner-logo"><img src="./public/assets/partners/equitas logo.png" alt="Equitas Bank" /></div>
                         </div>
                     </div>
                 </div>
