--- a/services.html
+++ b/services.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - FIN GATE</title>
-    <link rel="icon" type="image/png" href="./assets/images/fin-gate-logo.png">
-    <link rel="shortcut icon" type="image/png" href="./assets/images/fin-gate-logo.png">
+    <link rel="icon" type="image/png" href="./public/assets/images/fin-gate-logo.png">
+    <link rel="shortcut icon" type="image/png" href="./public/assets/images/fin-gate-logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./public/assets/css/style.css">
 </head>
 <body class="text-gray-700" data-page-type="other" data-active-page="services">
 
@@ -319,7 +319,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./public/assets/js/main.js"></script>
     <script src="./src/components/header.js"></script>
     <script src="./src/components/footer.js"></script>
     <script src="./src/components/components.js"></script>
