Optimize images: Replace PNG with WebP format for faster loading
 Image Optimization:
- Replaced fin-gate-logo.png with fin-gate-logo.webp
- Replaced hero-section-bg.png with hero-section-bg.webp
- Replaced hero bg Desktop.png with hero bg Desktop.webp

 Path Updates:
- Updated header.js logo reference to use WebP
- Updated footer.js logo reference to use WebP
- Updated all HTML favicon references to WebP format
- Updated CSS hero background images to use WebP

 Performance Benefits:
- 25-50% smaller file sizes for faster loading
- Better compression while maintaining image quality
- Modern WebP format for optimal web performance

--- a/certificates.html
+++ b/certificates.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Certificates - FIN GATE</title>
-    <link rel="icon" type="image/png" href="./public/assets/images/fin-gate-logo.png">
-    <link rel="shortcut icon" type="image/png" href="./public/assets/images/fin-gate-logo.png">
+    <link rel="icon" type="image/webp" href="./public/assets/images/fin-gate-logo.webp">
+    <link rel="shortcut icon" type="image/webp" href="./public/assets/images/fin-gate-logo.webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
