fix: Restore Google Analytics 4 implementation
- Re-add Google Analytics tracking script (G-22DZ8R6VLX) to all HTML pages
- Restore analytics.js helper library with comprehensive tracking functions
- Add preconnect hint for googletagmanager.com for faster GA loading
- Include automatic page view tracking and custom event tracking
- Form submissions now properly tracked in Google Analytics

This fixes the missing analytics that was accidentally removed during optimizations.

--- a/certificates.html
+++ b/certificates.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Certificates - FIN GATE</title>
 
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-22DZ8R6VLX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-22DZ8R6VLX');
+    </script>
+
     <!-- Preconnect hints for third-party domains -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="preconnect" href="https://cdn.tailwindcss.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
 
     <link rel="icon" type="image/webp" href="./public/assets/images/fin-gate-logo.webp">
     <link rel="shortcut icon" type="image/webp" href="./public/assets/images/fin-gate-logo.webp">
